--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 	  	img {
 	  		width: 300px;
 	  	}
+	  	#app {
+      border: dashed black 1px;
+      width: 200px;
+      padding: 0 10px 10px 10px;
+    }
+    #app > div {
+      width: 200px;
+      height: 50px;
+      border: solid black 1px;
+      background-color: lightgreen;
+    }
+    #app > p {
+      font-size: large;
+      font-weight: bold;
+    }
+    .valid {
+      color: green;
+    }
+    .invalid {
+      color: red;
+    }
 	  </style>
 	</head>
 	<body>
@@ -25,7 +46,13 @@
 		  	<p>Item: <input type="text" required="required" v-model="input_name"></p>
 		  	<p>Color: <input type="text" v-model="input_color"></p>
 		  	<button type="submit">Add</button>
+		  	<label>
+		    <p>Type a valid e-mail address:</p>
+		    <input type="email" v-model="inpAddress">
+		  </label>
+		  <p v-bind:class="myClass"><code>{{ feedbackText }}</code></p> 
 		  </form>
+		  
 		</div>
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 	<script>
@@ -42,9 +69,27 @@
 	     ],
 	     count : 0,
 	     input_name : null,
-	     input_color : null
+	     input_color : null,
+	     inpAddress: '',
+         feedbackText: '',
+         myClass: 'invalid'
 	    }
 	   },
+	   watch: {
+	      inpAddress(newVal,oldVal) {
+	        if(!newVal.includes('@')){
+	          this.feedbackText = 'The e-mail address is NOT valid';
+	          this.myClass = 'invalid';
+	        }
+	        else if(!oldVal.includes('@') && newVal.includes('@')) {
+	          this.feedbackText = 'Perfect! You fixed it!';
+	          this.myClass = 'valid'
+	        }
+	        else {
+	          this.feedbackText = 'The e-mail address is valid :)';
+	        }
+	      }
+	    },
 	   methods : {
 	     	add() {
 	     		let item = {
